--- a/Final_OOP_PROJECT.csproj
+++ b/Final_OOP_PROJECT.csproj
@@ -131,6 +131,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Gamers.cs" />
+    <Compile Include="Models\History.cs" />
     <Compile Include="Models\Individ.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
