--- a/Final_OOP_PROJECT.csproj
+++ b/Final_OOP_PROJECT.csproj
@@ -173,7 +173,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Login.cshtml" />
-    <Content Include="Views\LoginExistent.cshtml" />
+    <Content Include="Views\LoginExistent\LoginExistent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
