trying to complete login + login as admin

--- a/Final_OOP_PROJECT.csproj
+++ b/Final_OOP_PROJECT.csproj
@@ -175,6 +175,7 @@
     <Content Include="Views\Login.cshtml" />
     <Content Include="Views\LoginExistent\LoginExistent.cshtml" />
     <Content Include="Views\LoginExistent\Register.cshtml" />
+    <Content Include="Views\LoginExistent\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
