--- a/Final_OOP_PROJECT.csproj
+++ b/Final_OOP_PROJECT.csproj
@@ -175,7 +175,9 @@
     <Content Include="Views\Login.cshtml" />
     <Content Include="Views\LoginExistent\LoginExistent.cshtml" />
     <Content Include="Views\LoginExistent\Register.cshtml" />
-    <Content Include="Views\LoginExistent\Test.cshtml" />
+    <Content Include="Views\LoginExistent\testAdmin.cshtml" />
+    <Content Include="Views\LoginExistent\testulvietii.cshtml" />
+    <Content Include="Views\LoginExistent\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
