--- a/Final_OOP_PROJECT.csproj
+++ b/Final_OOP_PROJECT.csproj
@@ -181,6 +181,8 @@
     <Content Include="Views\Games\CatalogAdmin.cshtml" />
     <Content Include="Views\Games\CreateGame.cshtml" />
     <Content Include="Views\LoginExistent\Delete.cshtml" />
+    <Content Include="Views\LoginExistent\Edit.cshtml" />
+    <Content Include="Views\Games\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
